reconstruct project struct, and fix gradle bug.