@@ -1,22 +1,16 @@
-apply plugin: "java"
+import java.util.jar.JarEntry
+import java.util.jar.JarOutputStream
+
+apply plugin: "java-library"
 
 version '1.0'
-sourceSets.main.java.srcDirs = ["src"]
 
 ext{
   //the build number that this mod is made for
-  mindustryVersion = 'v131'
+  mindustryVersion = 'v135.2'
   //version of SDK you will be using
-  sdkVersion = '30.0.3'
-  sdkRoot = '/home/EBwilson/android_sdk'
-  
-  libOutputDir = '/home/EBwilson/IdeaProjects/Singularity/lib/'
-  modOutputDir = '/home/EBwilson/sd/Android/data/io.anuke.mindustry/files/mods'
-  
-  doExec = { cmd ->
-    def proc = cmd.execute(null, new File("$buildDir/libs"))
-    proc.waitForProcessOutput(System.out, System.err)
-  }
+  minSdkAPI = 30
+  sdkRoot = System.getenv("ANDROID_HOME")
 }
 
 repositories{
@@ -24,276 +18,221 @@ repositories{
   maven{ url 'https://www.jitpack.io' }
 }
 
-dependencies{
-  compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-  compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
-  
-  compileOnly project(":desktop")
-  compileOnly project(":android")
-  compile project(":abstractCore")
-  compile project(":natives")
-  compileOnly project(":annotations")
-  annotationProcessor project(":annotations")
-}
-
 allprojects{
   tasks.withType(JavaCompile){
-    if(JavaVersion.current() != JavaVersion.VERSION_11){
-      options.compilerArgs.addAll(['--release', '11'])
+    options.encoding = "UTF-8"
+
+    options.forkOptions.jvmArgs.addAll([
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+    ])
+  }
+
+  tasks.withType(JavaCompile){
+    options.compilerArgs.addAll(['--release', '11'])
+  }
+
+  tasks.withType(Jar){
+    archiveFileName = "${project.name}.jar"
+  }
+}
+
+configure(project(":annotations")) {
+  tasks.withType(JavaCompile){
+    options.fork = true
+  }
+}
+
+dependencies {
+  implementation project(":core")
+  implementation project(":abstract")
+  implementation project(":abstract2")
+  implementation project(":utilities")
+  implementation project(":mindustry")
+  compileOnly project(":android")
+  compileOnly project(":desktop")
+  compileOnly project(":annotations")
+}
+
+jar{
+  archiveFileName = "${rootProject.name}-base.jar"
+
+  from{
+    (subprojects - [project(":android"), project(":desktop"), project(":annotations")]).collect{zipTree("${it.buildDir}/libs/${it.name}.jar")}
+  }
+}
+
+task buildAndroid(type: Jar){
+  dependsOn jar
+
+  archiveFileName = "${rootProject.name}-android.jar"
+
+  from{[
+      zipTree("${rootProject.buildDir}/libs/${rootProject.name}-base.jar"),
+      zipTree("${project(":android").buildDir}/libs/android.jar")
+  ]}
+
+  doLast {
+    try {
+      def platformRoot = new File("$sdkRoot/platforms/").listFiles().sort().reverse().find { f -> new File(f, "android.jar").exists() }
+
+      //collect dependencies needed for desugaring
+      def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect { "--classpath $it.path" }.join(" ")
+
+      def d8 = new File("$sdkRoot/build-tools/").listFiles().find {
+        it.listFiles().any {
+          it.name.contains("d8")
+        } && Integer.valueOf(it.name.substring(0, 2)) >= minSdkAPI
+      }.listFiles().find { it.name.contains("d8") }
+
+      System.out.println("build android dex,,,")
+
+      //dex and desugar files - this requires d8 in your PATH
+      "$d8 $dependencies --min-api 30 --output ${rootProject.name}-android.jar ${project.archivesBaseName}-android.jar"
+          .execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
+    } catch (Throwable ignored) {
+      System.out.println("[WARNING] d8 tool or platform tools was not found, if you was installed android SDK, please check your environment variable")
+
+      delete(
+          files("${rootProject.buildDir}/libs/${rootProject.name}-android.jar")
+      )
+
+      def out = new JarOutputStream(new FileOutputStream("${rootProject.buildDir}/libs/${rootProject.name}-android.jar"))
+      out.putNextEntry(new JarEntry("non-androidMod.txt"))
+      StringReader reader = new StringReader(
+          "this mod is don't have classes.dex for android, please consider recompile with a SDK or run this mod on desktop only"
+      )
+
+      int r
+      while((r = reader.read()) != -1){
+        out.write(r)
+        out.flush()
+      }
+      out.close()
     }
   }
 }
 
-compileJava{
-  project.sourceCompatibility = 11
-  project.targetCompatibility = 11
-}
-
-jar{
-  archiveFileName = "${rootProject.name}-core.jar"
-}
-
-task buildAndroid(type: Jar){
-  dependsOn("jar")
-  
-  archiveFileName = "${rootProject.name}-androidLib.jar"
-  
-  from{[
-      zipTree("$buildDir/libs/${rootProject.name}-core.jar"),
-      zipTree("${project(":classes").buildDir}/libs/${project(":classes").name}.jar"),
-      zipTree("${project(":abstractCore").buildDir}/libs/${project(":abstractCore").name}.jar"),
-      zipTree("${project(":android").buildDir}/libs/${rootProject.name}-partAndroid.jar"),
-      zipTree("${project(":natives").buildDir}/libs/${project(":natives").name}.jar")
-  ]}
-  
-  doLast {
-    def platformRoot = new File("$sdkRoot/platforms/").listFiles().sort().reverse().find{ f -> new File(f, "android.jar").exists()}
-  
-    //collect dependencies needed for desugaring
-    def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect{ "--classpath $it.path" }.join(" ")
-  
-    //dex and desugar files - this requires d8 in your PATH
-    "$sdkRoot/build-tools/$sdkVersion/d8 $dependencies --min-api 14 --output ${rootProject.name}-androidLib.jar ${rootProject.name}-androidLib.jar"
-        .execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
-  }
-}
-
 task buildDesktop(type: Jar){
-  dependsOn("jar")
-  
-  archiveFileName = "${rootProject.name}-desktopLib.jar"
-  
+  dependsOn "jar"
+
+  archiveFileName = "${rootProject.name}-desktop.jar"
+
   from{[
-      zipTree("$buildDir/libs/${rootProject.name}-core.jar"),
-      zipTree("${project(":classes").buildDir}/libs/${project(":classes").name}.jar"),
-      zipTree("${project(":abstractCore").buildDir}/libs/${project(":abstractCore").name}.jar"),
-      zipTree("${project(":desktop").buildDir}/libs/${rootProject.name}-partDesktop.jar"),
-      zipTree("${project(":natives").buildDir}/libs/${project(":natives").name}.jar"),
-      zipTree("${project(":annotations").buildDir}/libs/${project(":annotations").name}.jar")
+      zipTree("${rootProject.buildDir}/libs/${rootProject.name}-base.jar"),
+      zipTree("${project(":desktop").buildDir}/libs/desktop.jar")
   ]}
 }
 
-task pack(type: Jar){
-  dependsOn("buildDesktop")
-  dependsOn("buildAndroid")
-  
-  archiveFileName = "${rootProject.name}-packed.jar"
-  
-  from{[
-      zipTree("$buildDir/libs/${rootProject.name}-desktopLib.jar"),
-      zipTree("$buildDir/libs/${rootProject.name}-androidLib.jar")
-  ]}
-  
-  doLast {
-    delete("${project(":classes").buildDir}/libs/${project(":classes").name}.jar")
-    delete("${project(":abstractCore").buildDir}/libs/${project(":abstractCore").name}.jar")
-    delete("${project(":natives").buildDir}/libs/${project(":natives").name}.jar")
-    delete("${project(":annotations").buildDir}/libs/${project(":annotations").name}.jar")
-    delete("$buildDir/libs/${rootProject.name}-desktopLib.jar")
-    delete("$buildDir/libs/${rootProject.name}-androidLib.jar")
-    delete("$buildDir/libs/${rootProject.name}-core.jar")
-  }
-}
+def deleteBase = true;
 
-task build(type: Jar, overwrite: true){
-  dependsOn("pack")
-  
+task buildMod(type: Jar){
+  dependsOn "buildAndroid"
+  dependsOn "buildDesktop"
+
   archiveFileName = "${rootProject.name}.jar"
-  
-  from{ zipTree("$buildDir/libs/${rootProject.name}-packed.jar") }
-  
+
+  from(
+      zipTree("${rootProject.buildDir}/libs/${rootProject.name}-android.jar"),
+      zipTree("${rootProject.buildDir}/libs/${rootProject.name}-desktop.jar")
+  )
+
   from(rootDir){
     include "mod.hjson"
     include "icon.png"
   }
-  
+
   from("assets/"){
     include "**"
   }
-  
-  doLast{
-    if(modOutputDir != null){
-      copy {
-        into("$modOutputDir/")
-        from("$buildDir/libs/${rootProject.name}.jar")
-      }
+
+  doLast {
+    delete("${rootProject.buildDir}/libs/${rootProject.name}-android.jar")
+    if (deleteBase) {
+      delete("${rootProject.buildDir}/libs/${rootProject.name}-desktop.jar")
+      delete("${rootProject.buildDir}/libs/${rootProject.name}-base.jar")
+    }
+  }
+}
+
+task buildLib(type: Jar){
+  dependsOn "buildDesktop"
+
+  archiveFileName = "${rootProject.name}-lib.jar"
+
+  from{[
+      zipTree("${rootProject.buildDir}/libs/${rootProject.name}-desktop.jar"),
+      zipTree("${project(":annotations").buildDir}/libs/annotations.jar")
+  ]}
+
+  doLast {
+    if (deleteBase) {
+      delete("${rootProject.buildDir}/libs/${rootProject.name}-desktop.jar")
+      delete("${rootProject.buildDir}/libs/${rootProject.name}-base.jar")
     }
   }
 }
 
 task toMod{
-  dependsOn("build")
-  
-  doLast { delete("$buildDir/libs/${rootProject.name}-packed.jar") }
+  dependsOn "buildMod"
+
+  doLast {
+    if (project.properties.get("modOutputDir") != null){
+      copy {
+        into("$modOutputDir/")
+        from("${rootProject.buildDir}/libs/${rootProject.name}.jar")
+      }
+
+      delete(
+          files("${rootProject.buildDir}/libs/${rootProject.name}.jar")
+      )
+    }
+    else System.out.println("[Note] field \"libOutputDir\" was not seted, jar file will output to build dir(/build/libs/)")
+  }
 }
 
-task toLib(type: Jar){
-  dependsOn("buildDesktop")
-  
-  archiveFileName = "${rootProject.name}-lib.jar"
-  
-  from{[
-      zipTree("$buildDir/libs/${rootProject.name}-desktopLib.jar")
-  ]}
-  
-  from("assets/"){
-    include "**"
-  }
-  
+task toLib{
+  dependsOn "buildLib"
+
   doLast {
-    delete("${project(":classes").buildDir}/libs/${project(":classes").name}.jar")
-    delete("${project(":abstractCore").buildDir}/libs/${project(":abstractCore").name}.jar")
-    delete("${project(":annotations").buildDir}/libs/${project(":annotations").name}.jar")
-    delete("${project(":natives").buildDir}/libs/${project(":natives").name}.jar")
-    delete("$buildDir/libs/${rootProject.name}-desktopLib.jar")
-    delete("$buildDir/libs/${rootProject.name}-core.jar")
-  
-    if(libOutputDir != null){
-      delete("$libOutputDir/${rootProject.name}-lib.jar")
+    if (project.properties.get("libOutputDir") != null){
       copy {
         into("$libOutputDir/")
-        from("$buildDir/libs/${rootProject.name}-lib.jar")
+        from("${rootProject.buildDir}/libs/${rootProject.name}-lib.jar")
       }
+
+      delete(
+          files("${rootProject.buildDir}/libs/${rootProject.name}-lib.jar")
+      )
     }
+    else System.out.println("[Note] field \"libOutputDir\" was not seted, jar file will output to build dir(/build/libs/)")
   }
 }
 
-project(":desktop"){
-  apply plugin: 'java'
-  
-  repositories{
-    mavenCentral()
-    maven{ url 'https://www.jitpack.io' }
-  }
-  
-  dependencies {
-    compile project(":abstractCore")
-    compileOnly project(":annotations")
-    annotationProcessor project(":annotations")
-  }
-  
-  compileJava.options.fork = true
-  
-  jar{
-    archiveFileName = "${rootProject.name}-partDesktop.jar"
+task deploy{
+  deleteBase = false
+
+  dependsOn "toLib"
+  dependsOn "toMod"
+
+  doLast {
+    delete("${rootProject.buildDir}/libs/${rootProject.name}-desktop.jar")
+    delete("${rootProject.buildDir}/libs/${rootProject.name}-base.jar")
   }
 }
 
-project(":android"){
-  apply plugin: 'java'
-  
-  repositories{
-    mavenCentral()
-    maven{ url 'https://www.jitpack.io' }
-  }
-  
-  dependencies {
-    compile project(":abstractCore")
-    compileOnly project(":annotations")
-    annotationProcessor project(":annotations")
-  }
-  
-  compileJava{
-    project.sourceCompatibility = 11
-    project.targetCompatibility = 11
-  }
-  
-  jar{
-    archiveFileName = "${rootProject.name}-partAndroid.jar"
+task build(overwrite: true){
+  deleteBase = false
+
+  dependsOn "buildLib"
+  dependsOn "buildMod"
+
+  doLast {
+    delete("${rootProject.buildDir}/libs/${rootProject.name}-desktop.jar")
+    delete("${rootProject.buildDir}/libs/${rootProject.name}-base.jar")
   }
 }
-
-project(":classes"){
-  apply plugin: 'java'
-  
-  repositories{
-    mavenCentral()
-    maven{ url 'https://www.jitpack.io' }
-  }
-  
-  dependencies {
-    compileOnly project(":annotations")
-    annotationProcessor project(":annotations")
-    compile project(":abstractCore")
-  }
-  
-  compileJava{
-    project.sourceCompatibility = 11
-    project.targetCompatibility = 11
-  }
-}
-
-project(":annotations"){
-  apply plugin: 'java'
-  
-  repositories{
-    mavenCentral()
-    maven{ url 'https://www.jitpack.io' }
-  }
-  
-  compileJava{
-    project.sourceCompatibility = 1.8
-    project.targetCompatibility = 1.8
-  }
-}
-
-project(":abstractCore"){
-  apply plugin: 'java'
-  
-  repositories{
-    mavenCentral()
-    maven{ url 'https://www.jitpack.io' }
-  }
-  
-  dependencies {
-    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
-    compileOnly project(":annotations")
-    annotationProcessor project(":annotations")
-  }
-  
-  compileJava{
-    project.sourceCompatibility = 11
-    project.targetCompatibility = 11
-  }
-}
-
-project(":natives"){
-  apply plugin: 'java'
-
-  repositories{
-    mavenCentral()
-    maven{ url 'https://www.jitpack.io' }
-  }
-
-  dependencies {
-    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
-  }
-
-  compileJava{
-    project.sourceCompatibility = 11
-    project.targetCompatibility = 11
-  }
-}
-
